--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:cardview-v7:26.+'
     implementation 'com.android.support:support-v4:26.0.0-beta2'
+    compile 'com.facebook.stetho:stetho:1.5.0'
+
 }
