--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -32,4 +33,5 @@ dependencies {
     implementation 'com.android.support:support-v4:26.0.0-beta2'
     compile 'com.facebook.stetho:stetho:1.5.0'
 
+    implementation 'com.android.support:support-vector-drawable:26.0.0-beta2'
 }
